added the about and the contact

--- a/index.html
+++ b/index.html
@@ -1272,6 +1272,11 @@ Bootstrap 5 HTML CSS Template
                             <p class="copyright-text">Copyright © Gotto Job 2048</p>
 
                             <ul class="footer-menu d-flex">
+
+                                <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">About</a></li>
+                                
+                                <li class="footer-menu-item"><a href="contact.html" class="footer-menu-link">Contact</a></li>
+
                                 <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy Policy</a></li>
 
                                 <li class="footer-menu-item"><a href="#" class="footer-menu-link">Terms</a></li>
